# penitence-source

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SDL2Project  main.cpp
.github/workflows/: ci.yml
SDL2Project.dSYM/Contents/Resources/DWARF/: SDL2Project
docs/: ECS-rules.md  Event-Driven.md
docs/doxygen/: main.md
docs/doxygen/doxygen-awesome-css/: doxygen-awesome.css
docs/doxygen/html/: _animating_8hpp.html  _animating_8hpp.js  _animating_8hpp__dep__incl.map  _animating_8hpp__dep__incl.md5  _animating_8hpp__incl.map  _animating_8hpp__incl.md5  _animating_8hpp_source.html  _animation_8hpp.html  _animation_8hpp.js  _animation_8hpp__dep__incl.map  _animation_8hpp__dep__incl.md5  _animation_8hpp__incl.map  _animation_8hpp__incl.md5  _animation_8hpp_source.html  _announcer_8hpp.html  _announcer_8hpp.js  _announcer_8hpp__dep__incl.map  _announcer_8hpp__dep__incl.md5  _announcer_8hpp__incl.map  _announcer_8hpp__incl.md5  _announcer_8hpp_source.html  _collider_8hpp.html  _collider_8hpp.js  _collider_8hpp__dep__incl.map  _collider_8hpp__dep__incl.md5  _collider_8hpp__incl.map  _collider_8hpp__incl.md5  _collider_8hpp_source.html  _collision_8hpp.html  _collision_8hpp.js  _collision_8hpp__dep__incl.map  _collision_8hpp__dep__incl.md5  _collision_8hpp__incl.map  _collision_8hpp__incl.md5  _collision_8hpp_source.html  _component_8hpp.html  _component_8hpp.js  _component_8hpp__dep__incl.map  _component_8hpp__dep__incl.md5  _component_8hpp_source.html  (+316 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+56 more)
include/: Game.hpp  Protagonist.hpp  Vector2D.cpp  Vector2D.h
include/components/: Animation.hpp  Collider.hpp  Component.hpp  ComponentPool.hpp  Components.hpp  Gravity.hpp  InputBehavior.hpp  PlayerState.hpp  Position.hpp  Sprite.hpp  Transform.hpp  Velocity.hpp
include/core/: Core.hpp  ECSManager.hpp  Entity.hpp  Game.hpp  ServiceLocater.hpp  Storage.hpp  World.hpp
include/core/events/: Announcer.hpp  Dispatcher.hpp  Event.hpp  Events.hpp  KeyPressed.hpp  KeyReleased.hpp  Keyboard.hpp
include/events/: Announcer.hpp  Dispatcher.hpp  Event.hpp  Events.hpp  Keyboard.hpp  PlayerCollided.hpp
include/game/: Game.hpp
include/systems/: Animating.hpp  Collision.hpp  Movement.hpp  Rendering.hpp  System.hpp  Systems.hpp
includes/: AssetManager.h  Collision.h  Components.h  ECS.h  Game.h  GameObject.h  KeyboardController.h  Map.h  Sprite.h  TextureManager.h  TileMap.h  Transform.h  Vector2D.h
includes/ecs/: Animation.h  Collider.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  Projectile.h  Sprite.h  Tile.h  Transform.h
lib/: AssetManager.cpp  CmakeLists.txt  Collision.cpp  ECS.cpp  Game.cpp  GameObject.cpp  Map.cpp  TextureManager.cpp  TileMap.cpp  Vector2D.cpp
libs/SFML/lib/: libsfml-audio.2.6.1.dylib  libsfml-graphics.2.6.1.dylib
libs/sdl2/lib/: libSDL2-2.0.0.dylib
savedata/: save.json
src/: Component.h  ECS.h  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  MovementComponents.h  MovementSystem.h  Position.h  Protagonist.cpp  TextureManager.cpp  TextureManager.h  TileMap.cpp  Velocity.h  main.cpp
src/core/: ECSManager.cpp  Game.cpp  Storage.cpp  World.cpp
src/core/events/: Announcer.cpp  Dispatcher.cpp
src/events/: Announcer.cpp  Dispatcher.cpp
src/game/: game.cpp
src/systems/: Animating.cpp  Collision.cpp  Movement.cpp  Rendering.cpp
(+1 files in other folders)
